--- a/src/Authentication/Authentication.csproj
+++ b/src/Authentication/Authentication.csproj
@@ -169,9 +169,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Commands.Common.Authentication.Abstractions\Commands.Common.Authentication.Abstractions.csproj">
+    <ProjectReference Include="..\Authentication.Abstractions\Authentication.Abstractions.csproj">
       <Project>{70527617-7598-4aef-b5bd-db9186b8184b}</Project>
-      <Name>Commands.Common.Authentication.Abstractions</Name>
+      <Name>Authentication.Abstractions</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
