--- a/src/Websites/Websites.Netcore.csproj
+++ b/src/Websites/Websites.Netcore.csproj
@@ -44,8 +44,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Commands.Common\Common.Netcore.csproj" />
-    <ProjectReference Include="..\Commands.ResourceManager.Common\Common.ResourceManager.Netcore.csproj" />
+    <ProjectReference Include="..\Common\Common.Netcore.csproj" />
+    <ProjectReference Include="..\ResourceManager\ResourceManager.Netcore.csproj" />
   </ItemGroup>
   
 </Project>
