--- a/src/Authentication.ResourceManager/Authentication.ResourceManager.Netcore.csproj
+++ b/src/Authentication.ResourceManager/Authentication.ResourceManager.Netcore.csproj
@@ -36,9 +36,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Commands.Common.Authentication.Abstractions\Common.Authentication.Abstractions.Netcore.csproj" />
-    <ProjectReference Include="..\Commands.Common.Authentication\Common.Authentication.Netcore.csproj" />
-    <ProjectReference Include="..\Commands.Common\Common.Netcore.csproj" />
+    <ProjectReference Include="..\Authentication.Abstractions\Authentication.Abstractions.Netcore.csproj" />
+    <ProjectReference Include="..\Authentication\Authentication.Netcore.csproj" />
+    <ProjectReference Include="..\Common\Common.Netcore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
