--- a/src/KeyVault/KeyVault.Netcore.csproj
+++ b/src/KeyVault/KeyVault.Netcore.csproj
@@ -45,9 +45,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Commands.Common.Authentication.Abstractions\Common.Authentication.Abstractions.Netcore.csproj" />
-    <ProjectReference Include="..\Commands.ResourceManager.Common\Common.ResourceManager.Netcore.csproj" />
-    <ProjectReference Include="..\Commands.Common\Common.Netcore.csproj" />
+    <ProjectReference Include="..\Authentication.Abstractions\Authentication.Abstractions.Netcore.csproj" />
+    <ProjectReference Include="..\ResourceManager\ResourceManager.Netcore.csproj" />
+    <ProjectReference Include="..\Common\Common.Netcore.csproj" />
   </ItemGroup>
 
 </Project>
