--- a/src/Probe.Test/Probe.Test.Netcore.csproj
+++ b/src/Probe.Test/Probe.Test.Netcore.csproj
@@ -20,8 +20,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Commands.ScenarioTests.ResourceManager.Common\Common.ResourceManager.ScenarioTests.Netcore.csproj" />
-    <ProjectReference Include="..\Commands.Common\Common.Netcore.csproj" />
+    <ProjectReference Include="..\ScenarioTest.ResourceManager\ScenarioTest.ResourceManager.Netcore.csproj" />
+    <ProjectReference Include="..\Common\Common.Netcore.csproj" />
   </ItemGroup>
 
 </Project>
