--- a/src/ScenarioTest.ResourceManager/ScenarioTest.ResourceManager.nuspec
+++ b/src/ScenarioTest.ResourceManager/ScenarioTest.ResourceManager.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Microsoft.Azure.PowerShell.ScenarioTest.ResourceManager</id>
-    <version>1.0.0</version>
+    <version>1.0.0-preview</version>
     <title>Microsoft Azure PowerShell ScenarioTest ResourceManager</title>
     <authors>Microsoft Corporation</authors>
     <owners>Microsoft Corporation</owners>
@@ -13,4 +13,10 @@
     <copyright>Copyright © Microsoft Corporation</copyright>
     <tags>azure powershell scenariotest resourcemanager</tags>
   </metadata>
+  <files>
+    <file src="Assert.ps1" target="tools" />
+    <file src="Common.ps1" target="tools" />
+    <file src="AzureRM.Resources.ps1" target="tools" />
+    <file src="AzureRM.Storage.ps1" target="tools" />
+  </files>
 </package>
