--- a/src/ScenarioTest/ScenarioTest.nuspec
+++ b/src/ScenarioTest/ScenarioTest.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Microsoft.Azure.PowerShell.ScenarioTest</id>
-    <version>1.0.0</version>
+    <version>1.0.0-preview</version>
     <title>Microsoft Azure PowerShell ScenarioTest</title>
     <authors>Microsoft Corporation</authors>
     <owners>Microsoft Corporation</owners>
