Fix for ScenarioTest.ResourceManager thinking it is a test project and failing the build because of it.

--- a/src/ScenarioTest.ResourceManager/ScenarioTest.ResourceManager.Netcore.csproj
+++ b/src/ScenarioTest.ResourceManager/ScenarioTest.ResourceManager.Netcore.csproj
@@ -10,6 +10,7 @@
     <OutputPath>$(ProjectDir)..\..\artifacts\$(Configuration)</OutputPath>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
+    <IsTestProject>false</IsTestProject>
   </PropertyGroup>
 
   <PropertyGroup>
