--- a/src/Probe.Test/Probe.Test.Netcore.csproj
+++ b/src/Probe.Test/Probe.Test.Netcore.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="$(ProjectDir)..\Common.Netcore.Dependencies.Test.targets" />
+  <Import Project="$(ProjectDir)..\Dependencies.Test.Netcore.targets" />
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
