--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ msbuild.log
 # please do not commit any app.config files.
 app.config
 !src/ResourceManager/Profile/Commands.Profile.Test/App.config
+!src/ResourceManager/Resources/Commands.Resources.Test/App.config
+!src/ResourceManager/Storage/Commands.Management.Storage.Test/App.config
 !src/ResourceManager/ManagedServiceIdentity/Commands.ManagedServiceIdentity.Test/App.config
 !src/Storage/Commands.Storage.Test/app.config
 
