Profile switched to the new test controller

--- a/src/ResourceManager/Profile/Commands.Profile.Test/Commands.Profile.Test.Netcore.csproj
+++ b/src/ResourceManager/Profile/Commands.Profile.Test/Commands.Profile.Test.Netcore.csproj
@@ -32,6 +32,7 @@
     <ProjectReference Include="..\..\Common\Commands.Common.Authentication.ResourceManager\Common.ResourceManager.Authentication.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.ResourceManager.Common\Common.ResourceManager.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.ScenarioTests.ResourceManager.Common\Common.ResourceManager.ScenarioTests.Netcore.csproj" />
+    <ProjectReference Include="..\..\Common\Commands.TestFw\Commands.TestFw.Netcore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
