--- a/src/ResourceManager/Search/Commands.Management.Search/Commands.Management.Search.csproj
+++ b/src/ResourceManager/Search/Commands.Management.Search/Commands.Management.Search.csproj
@@ -49,6 +49,11 @@
     <Compile Include="Models\PSSearchQueryKey.cs" />
     <Compile Include="Models\PSSearchService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SearchService\GetSearchServiceAdminKeyPairCommand.cs" />
     <Compile Include="SearchService\GetSearchServiceCommand.cs" />
     <Compile Include="SearchService\GetSearchServiceQueryKeyCommand.cs" />
@@ -90,6 +95,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
