Fixed Network including txt content. Fixed both ScenarioTest projects from pulling in content DLLs during packaging.

--- a/src/Network/Network.csproj
+++ b/src/Network/Network.csproj
@@ -496,7 +496,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Version2017_10_01\network_resource-manager.txt" />
+    <None Include="Version2017_10_01\network_resource-manager.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
